Changed the reference to the folder instead of the html

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         <nav id = "menu">
             <hr width = "50%"/>
            <a href="/portfolio/home.html" >Lab 1</a>
-           <a href="/Assignments/Homework1/home.html">Homework 1</a>
+           <a href="/Assignments/Homework1">Homework 1</a>
         </nav>
     </body>
 </html>
