Changed the naming of some folders

--- a/home.html
+++ b/home.html
@@ -10,8 +10,8 @@
         </header>
         <nav id = "menu">
             <hr width = "50%"/>
-           <a href="/portfolio/home.html" >Lab 1</a>
-           <a href="/Assignments/Homework1/home.html">Homework 1</a>
+           <a href="/Labs/1/home.html" >Lab 1</a>
+           <a href="/Assignments/1/home.html">Homework 1</a>
         </nav>
     </body>
 </html>
