fixed main html

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         <nav id = "menu">
             <hr width = "50%"/>
            <a href="/Labs/1/home.html" >Lab 1</a>
-           <a href="/Assignments/1/home.html">Homework 1</a>
+           <a href="/Assignment/1/home.html">Homework 1</a>
         </nav>
     </body>
 </html>
