Changed a couple of things in git, I hope nothing is broken

--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
            <a href="/Labs/1/home.html" >Lab 1</a>
            <a href="/Labs/2/index.php">Lab 2</a>
            <a href="/Labs/3/index.php">Lab 3</a>
+           <a href="/Labs/4/index.php">Lab 4</a>
            <a href="/Assignment/1/home.html">Homework 1</a>
            <a href="/Assignment/2/index.php">Homework 2</a>
         </nav>
