updated the directory

--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
            <a href="/Labs/4/index.php">Lab 4</a>
            <a href="/Assignment/1/home.html">Homework 1</a>
            <a href="/Assignment/2/index.php">Homework 2</a>
+           <a href="/Projects/GroupProject1/index.php">Group Project 1</a>
         </nav>
     </body>
 </html>
