--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
            <a href="/Labs/5/login.php">Lab 5</a>
            <a href="/Assignment/1/home.html">Homework 1</a>
            <a href="/Assignment/2/index.php">Homework 2</a>
+           <a href="/Assignment/4/index.php">Homework 4</a>
            <a href="/Projects/GroupProject/index.php">Group Project 1</a>
         </nav>
     </body>
