Added the poll to the directory

--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
            <a href="/Assignment/2/index.php">Homework 2</a>
            <a href="/Assignment/4/index.php">Homework 4</a>
            <a href="/Projects/GroupProject/index.php">Group Project 1</a>
+           <a href="/Playground/Poll2/poll.php">Poll</a>
         </nav>
     </body>
 </html>
