This is a test of the image gallery on heroku

--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
            <a href="/Labs/4/index.php">Lab 4</a>
            <a href="/Labs/5/login.php">Lab 5</a>
            <a href="/Labs/6/index.html">Lab 6</a>
+           <a href="/Labs/7/File-Upload/index.php">Lab 7</a>
            <a href="/Assignment/1/home.html">Homework 1</a>
            <a href="/Assignment/2/index.php">Homework 2</a>
            <a href="/Assignment/4/index.php">Homework 4</a>
