--- a/Final/2018-05-11/rubric.html
+++ b/Final/2018-05-11/rubric.html
@@ -65,7 +65,7 @@
 </tr>
 <tr>
 <td style="text-align:left">BD</td>
-<td id="partial" style="text-align:left">A banner file can be uploaded and displayed</td>
+<td id="finished" style="text-align:left">A banner file can be uploaded and displayed</td>
 <td style="text-align:left">20</td>
 </tr>
 <tr>
